fix: Ajusta footer

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="./assets/logo/logomiaudote.png">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="geral">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
